Update FAQ page for better SEO, fix collapse for secondary lang page

--- a/less/components/panels.less
+++ b/less/components/panels.less
@@ -8,7 +8,7 @@
         border-left: none;
         color: @brand-primary;
         position: relative;
-        h4 {
+        h4, .h4 {
             font-weight: 600;
             position: relative;
         }
